# Contactive

./: .env  .gitignore  Cargo.toml  dockerfile  test.sh  wait.sh
migrations/: dockerfile  wait.sh
migrations/2021-03-16-135255_contacts/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: contact.rs  mod.rs  persona.rs  schema.rs  user.rs
src/db/contact/: info.rs  mod.rs
src/jwt/: blacklist.rs  mod.rs
src/routing/: mod.rs  user.rs
src/routing/contacts/: info.rs  mod.rs  personas.rs
src/routing/contacts/info/: mod.rs
src/tests/: mod.rs  scenario.rs
src/verification/: mod.rs
src/verification/jwt/: blacklist.rs  contact_jwt.rs  jwt_data.rs  mod.rs  persona_jwt.rs
