[package]
name = "contactive"
version = "0.1.0"
authors = ["Alex Angelou <ubuntu1aggelalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "numeric"] }
dotenv = "0.15.0"
rocket = { version = "0.4.7", features = ["private-cookies"] }
rocket_contrib = "*"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.8"
base64 = "0.13.0"
sha2 = "0.9.3"
jwt-simple = "0.9.3"
time = "0.1"
lazy_static = "1.4.0"
sorted-vec = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }